syntax = "proto3";

package action;
option go_package = "./basestation";

// Enum for different types of actions
enum ActionType {
  STOP_ACTION = 0;
  KICK_ACTION = 1;
  MOVE_ACTION = 2;
  INIT_ACTION = 3;
}

message Command {
  ActionType command_id = 1;
  int32 robot_id = 2;
  int32 speed = 3;
  Vector3D pos = 4;
  Vector3D goal = 5;
}

// Message for Stop action communication
message StopCommand {
  int32 id = 1;
}

// Message for Move action communication
message MoveCommand {
  int32 id = 1;
  Vector3D pos = 2;
  Vector3D goal = 3;
}

// Message for Kick action communication
message KickCommand {
  int32 id = 1;
  int32 speed = 2;
}

// Message for Init action communication
message InitCommand {
  int32 id = 1;
}

// Structure for 3D vector
message Vector3D {
  int32 x = 1;
  int32 y = 2;
  float w = 3;
}